<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KeyChain Utility</string>
    <string name="algorithm_rsa">RSA</string>
    <string name="algorithm_dsa">DSA</string>
    <string name="algorithm_ecc">ECC</string>
    <string name="algorithm_supported">Algorithm is supported</string>
    <string name="algorithm_bound">Keys are hardware bound</string>
    <string name="test_key_exists">Test key exists</string>
    <string name="btn_generate">Generate</string>
    <string name="btn_test">Test</string>
    <string name="btn_delete">Delete</string>

</resources>
