<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".KeyChainDiagActivity">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="?android:attr/listSeparatorTextViewStyle"
                android:text="@string/algorithm_rsa"/>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical"
                android:showDividers="middle"
                android:divider="?android:dividerHorizontal">
            <TextView
                    android:id="@+id/rsa_supported"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/algorithm_supported"
                    android:drawableLeft="@android:drawable/checkbox_off_background"
                    android:drawablePadding="8dp"/>
            <TextView
                    android:id="@+id/rsa_bound"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/algorithm_bound"
                    android:drawableLeft="@android:drawable/checkbox_off_background"
                    android:drawablePadding="8dp"/>
        </LinearLayout>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="?android:attr/listSeparatorTextViewStyle"
                android:text="@string/algorithm_dsa"/>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical"
                android:showDividers="middle"
                android:divider="?android:dividerHorizontal">
            <TextView
                    android:id="@+id/dsa_supported"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/algorithm_supported"
                    android:drawableLeft="@android:drawable/checkbox_off_background"
                    android:drawablePadding="8dp"/>
            <TextView
                    android:id="@+id/dsa_bound"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/algorithm_bound"
                    android:drawableLeft="@android:drawable/checkbox_off_background"
                    android:drawablePadding="8dp"/>
        </LinearLayout>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="?android:attr/listSeparatorTextViewStyle"
                android:text="@string/algorithm_ecc"/>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical"
                android:showDividers="middle"
                android:divider="?android:dividerHorizontal">
            <TextView
                    android:id="@+id/ecc_supported"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/algorithm_supported"
                    android:drawableLeft="@android:drawable/checkbox_off_background"
                    android:drawablePadding="8dp"/>
            <TextView
                    android:id="@+id/ecc_bound"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/algorithm_bound"
                    android:drawableLeft="@android:drawable/checkbox_off_background"
                    android:drawablePadding="8dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
